--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="container">
-        <div class="umbrella"> <img id="myImg" src="Yellow.png" alt="umbrella"></img>
+        <div class="umbrella"> <img id="myImg" src="./assets/Yellow.png" alt="umbrella"></img>
         
         <img id="logo" ></img>
         <!-- <img id="load" src="loader_icon.svg"></img> -->
